# hugoai

./: README.md  pyproject.toml
hugoai/: chains.py  cli.py  rules.py  websvc.py
notebooks/: Study.ipynb
