[tool.poetry]
name = "hugoai"
version = "0.1.0"
description = "HUGO AI Content Moderation Agent"
authors = ["Vasanth Sarathy <vsarathy@sift.net>"]

[tool.poetry.scripts]
hugoai = 'hugoai.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.5.3"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
dash = "^2.9.1"
dash-mantine-components = "^0.12.0"
dash-bootstrap-components = "^1.4.1"
openai = "^0.27.2"
langchain = "^0.0.130"
dash-extensions = "^0.1.13"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
